--- a/css/partials/global.css
+++ b/css/partials/global.css
@@ -31,3 +31,27 @@
     background-clip: padding-box;
     color:black;
 }
+
+.button.primary-button::after, .button.secondary-button::after{
+    position: absolute;
+    top:-2px;
+    left:-2px;
+    right:-2px;
+    bottom:-2px;
+    background: var(--gradient-color);
+    content: "";
+    z-index: -1;
+    border-radius: 4px;
+}
+
+.button.secondary-button{
+    background: white;
+    background-clip: padding-box;
+    transition: background .6s ease;
+}
+
+.button.secondary-button:hover{
+    background: var(--gradient-color);
+    color: whitesmoke;
+    box-shadow: var(--box-shadow);
+}
