--- a/css/style.css
+++ b/css/style.css
@@ -78,3 +78,24 @@
 }
 
 /* end banner area */
+
+/* Start About area */
+
+.site-main .about-area{
+    padding: 8rem 5rem;
+}
+
+/* targeting all span elements of h2 */
+
+.site-main .about-area .about-title h2>span{
+display: block;
+font: normal bold 49px/60px var(--roboto);
+letter-spacing: 10px;
+}
+
+.site-main .about-area .about-title .paragraph > p{
+    padding: .4rem 0;
+    /* border: 1px solid pink */
+}
+
+/* End About area */
