--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,16 @@ letter-spacing: 10px;
 
 .site-main > .services-area .services{
     background: rgba(248, 252, 253, 0.973);
+    padding:2rem 0;
+    width: 16rem;
+    margin:5rem .5rem;
+    transition: box-shadow .7s ease;
+    /* border:1px solid salmon */
+}
+
+.site-main > .services-area .services:hover{
+    box-shadow: var(--box-shadow);
+    cursor: pointer;
 }
 
 /* end services area */
