--- a/css/style.css
+++ b/css/style.css
@@ -237,3 +237,45 @@ filter: brightness(1.1) drop-shadow(1px 8px 30px #b1abaf);
 }
 
 /* End Project Area */
+
+/* What Client say about me section start */
+
+.site-main .about-area .about-title p{
+    padding:1rem 7rem;
+}
+
+.site-main .about-area .client{
+    background: #ffffff10;
+    box-shadow: var(--box-shadow);
+    margin:3rem 0rem;
+}
+
+.site-main .about-area .client .client-img{
+    padding: 2rem;
+}
+
+.site-main .about-area .client .about-client{
+    padding-top: 2rem;
+}
+
+.site-main .about-area .client .about-client h4{
+    font:normal 500 21px/20px var(--roboto)
+}
+
+.site-main .about-area .client .about-client p{
+    font-size: 14px;
+}
+
+.site-main .about-area .owl-carousel .owl-item{
+    display: flex;
+    justify-content: center;
+    padding:0 1.5rem;
+}
+
+.site-main .about-area .owl-carousel .owl-dots .owl-dot.active span{
+    background: var(--primary-color);
+    width: 12px;
+    height: 12px;
+}
+
+/* What Client say about me section end */
