--- a/css/partials/global.css
+++ b/css/partials/global.css
@@ -73,3 +73,15 @@ button:focus, button:active, button:hover, .btn:active, .btn.active{
 .title-h1{
     font: normal bold 39px/40px var(--roboto);
 }
+
+.navbar_fixed{
+    position: fixed;
+    width: 100%;
+    top:-1px;
+    left: 0;
+    right: 0;
+    background: white;
+    box-shadow: var(--box-shadow);
+    z-index: 999;
+    transition: background 1s ease;
+}
