--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,9 @@
 
 /* start banner area */
 
-.site-main .site-banner {
+/* .site-main .site-banner {
     border: 1px solid burlywood;
-}
+} */
 
 .site-main .site-banner .site-title h3 {
     padding-top: 35%;
@@ -318,3 +318,25 @@ filter: brightness(1.1) drop-shadow(1px 8px 30px #b1abaf);
 }
 /* subscribe me section end */
 
+/* footer area start */
+
+footer.footer-area{
+    padding: 5rem 0;
+    background: url(../img/footer-bg.png) no-repeat;
+}
+
+footer.footer-area .social h5{
+    font: normal 500 23px/30px var(--roboto);
+}
+
+footer.footer-area .social a > i{
+    font-size: 22px;
+    padding:2rem;
+    color: var(--border-color);
+} 
+
+
+footer.footer-area .social a:hover > i{
+    color: var(--primary-color);
+}
+/* footer area end */
